--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,7 +11,7 @@ spring.thymeleaf.encoding=UTF-8
 spring.thymeleaf.cache=false
 
 # Configuración de la base de datos
-spring.datasource.url=jdbc:mysql://localhost:3306/integrador1_pizzeria_utp?useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/apirest_user?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=
 
